--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   /* max-width: 1200px; */
   display: flex;
   justify-content: center;
+  padding-top: 30px;
   /* margin: 0 auto; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -17,6 +18,10 @@ code {
 
 .resizable {
   position: relative;
+}
+.resizable:hover{
+  background-color: aliceblue;
+  cursor: pointer;
 }
 
 .resizer {
